# fullstack-react-fastapi-dynamodb

./: .gitignore  LICENSE  README.md  cookiecutter.json
{{cookiecutter.directory_name}}/api/: Pipfile  (+2 more)
{{cookiecutter.project_name}}/api/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  Pipfile  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
{{cookiecutter.project_name}}/api/.circleci/: config.yml
{{cookiecutter.project_name}}/api/app/: main.py
{{cookiecutter.project_name}}/api/app/api/: deps.py
{{cookiecutter.project_name}}/api/app/constants/: aws_errors.py
{{cookiecutter.project_name}}/api/app/core/: config.py  security.py
{{cookiecutter.project_name}}/api/app/crud/: __init__.py  base.py  crud_expense.py  crud_organization.py  crud_project.py  crud_table.py  crud_user.py
{{cookiecutter.project_name}}/api/app/db/: Dockerfile  base.py  base_class.py  client.py
{{cookiecutter.project_name}}/api/app/models/: __init__.py  expense.py  organization.py  project.py  table.py  user.py
{{cookiecutter.project_name}}/api/app/schemas/: __init__.py  expense.py  organization.py  project.py  table.py  token.py  user.py
{{cookiecutter.project_name}}/api/app/utils/: dynamodb.py  errors.py
{{cookiecutter.project_name}}/api/data/: employees.json  projects.json
{{cookiecutter.project_name}}/api/scripts/: initial_data.py  pre_start.py  start.py  test.py  utils.py
{{cookiecutter.project_name}}/api/tests/: .coveragerc  conftest.py
{{cookiecutter.project_name}}/api/tests/api/: test_tables.py
(+109 files in other folders)
